refactor: 키워드 조회 service 경로 거치지않고 repository 에서 조회하도록 수정